--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         		<div class="staff">
       				<div class="img mb-4" style="background-image: url(images/person_6.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Sammy Kanyi</a></h3>
+      					<h3><a href="teacher-single.html">DR. Ngandu</a></h3>
       					<span class="position">Doctor in Charge</span>
       					<div class="text">
 	        				<p>Chief Doctor position at the Kenneth Matiba hospital.</p>
@@ -519,7 +519,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+                    <p class="mb-5">Dagitari aajarairie wega na ngiheo dawa cia maitho.</p>
                     <p class="name">Kyendy Mauwi</p>
                     <span class="position">ICT support Intern</span>
                   </div>
@@ -533,7 +533,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5">kila mtu uku amejitolea na wanakuhelp whenever uko swali ama consolt</p>
                     <p class="name">Wekesa</p>
                     <span class="position">Chief Security</span>
                   </div>
@@ -547,7 +547,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5">Services ni chap chap but sa zingine akuna net so huezi NHIF</p>
                     <p class="name">IGGY</p>
                     <span class="position">Doctor and Specialist</span>
                   </div>
@@ -561,7 +561,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5">Their DICE na CHS facilities ni top ranked muranga na staff wako polite na dedicated.</p>
                     <p class="name">Wincate Wanjiku</p>
                     <span class="position">CHS correspondent</span>
                   </div>
@@ -575,7 +575,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5">DICE is ready to receive and help everyone without prejudice and with absolute 100% professionalism</p>
                     <p class="name">Phanice </p>
                     <span class="position">Administrator DICE Muranga</span>
                   </div>
@@ -591,28 +591,28 @@
     	<div class="container-wrap">
     		<div class="row no-gutters">
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/DRGITAU.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/KN.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/WAIRIA.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
@@ -772,7 +772,7 @@
           </div>
           <div class="col-md-4 pr-md-4">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Recent Blog</h2>
+              <h2 class="ftco-heading-2">Recent Articles</h2>
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/WAIRIA.jpg);"></a>
                 <div class="text">
