--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/WAIRIA.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                  <h3 class="heading"><a href="#">The Murang’a County Government has said the free clinic for patients...</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
@@ -787,7 +787,7 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/KN.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                  <h3 class="heading"><a href="#">Construction of a new state-of-the-art health facility for relocation of the Kenneth Matiba Eye & dental...</a></h3>
                   <div class="meta">
                     <div><a href="#"><span class="icon-calendar"></span> Jan 5, 2021</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
