--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>DentaCare - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Kenneth Matiba Hospital - Kenol</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Denta<span>Care</span></a>
+	      <a class="navbar-brand" href="index.html">Kenneth<span>Matiba</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -41,7 +41,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item active"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="doctors.html" class="nav-link">Doctors</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Articles</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="contact.html" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Make an Appointment</span></a></li>
 	        </ul>
@@ -69,7 +69,7 @@
       	<div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
             <h2 class="mb-2">Our Service Keeps you Smile</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p>Dental treatment with a Modern feel and attention. Advanced technological equipment, techniques, communication lines and services</p>
           </div>
         </div>
         <div class="row">
@@ -80,7 +80,7 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Teeth Whitening</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>A dental professional whitening procedure offers a higher concentration of whitening components and delivers them to the teeth in the most efficient manner</p>
               </div>
             </div>      
           </div>
@@ -91,7 +91,7 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Teeth Cleaning</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>Modern techniques and professional dental practisioners to give the best Experience and satisfaction. All teeth cleanings are performed by a dental hygienist.</p>
               </div>
             </div>    
           </div>
@@ -101,8 +101,8 @@
             		<span class="flaticon-tooth-with-braces"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Quality Brackets</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Quality Braces</h3>
+                <p>Favoured by both adults and children metal alternatives. Made from translucent materials; some options even include tooth-coloured wires to make them even more discreet.</p>
               </div>
             </div>      
           </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Modern Anesthetic</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>Induces sleep while allowing a patient to continue breathing on their own. It is often utilized by anesthesiologist for sedation in addition to anxiolytics and analgesics.</p>
               </div>
             </div>      
           </div>
@@ -125,7 +125,7 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Dental Calculus</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>A dental professional whitening procedure offers a higher concentration of whitening components and delivers them to the teeth in the most efficient manner</p>
               </div>
             </div>      
           </div>
@@ -135,8 +135,8 @@
             		<span class="flaticon-bacteria"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Paradontosis</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Periodontitis</h3>
+                <p>Periodontitis is a progressive gingival and periodontal tissue inflammation disease. This is the most common cause of tooth loss in subjects above 35 years of age.</p>
               </div>
             </div>    
           </div>
@@ -147,7 +147,7 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Dental Implants</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>prosthesis that interfaces with the bone of the jaw or skull to support a dental prosthesis such as a crown, bridge, denture, or facial prosthesis or to act as an orthodontic anchor.</p>
               </div>
             </div>      
           </div>
@@ -157,9 +157,9 @@
             		<span class="flaticon-dental-care-1"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Tooth Braces</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
+                <h3>Comfortable and relaxing Clinics</h3>
+	      					<p>Most comfortable beds in the waiting bays and wards. Come relax with a book or the newspaper or watch some TV. A Safe and Relaxing Atmosphere for Everyone patients.</p>
+      					</div>
             </div>      
           </div>
         </div>
@@ -172,7 +172,7 @@
     			<div class="col-md-3 aside-stretch py-5">
     				<div class=" heading-section heading-section-white ftco-animate pr-md-4">
 	            <h2 class="mb-3">Achievements</h2>
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+	            <p>We offer FREE Eye and Dental treatment using Modern technology and techniques for the best result.</p>
 	          </div>
     			</div>
     			<div class="col-md-9 py-5 pl-md-5">
