--- a/doctors.html
+++ b/doctors.html
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Denta<span>Care</span></a>
+	      <a class="navbar-brand" href="index.html">Kenneth<span>Matiba</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -41,7 +41,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item active"><a href="doctors.html" class="nav-link">Doctors</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Articles</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="contact.html" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Make an Appointment</span></a></li>
 	        </ul>
@@ -51,7 +51,7 @@
     <!-- END nav -->
 
     <section class="home-slider owl-carousel">
-      <div class="slider-item bread-item" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+      <div class="slider-item bread-item" style="background-image: url('images/DR.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container" data-scrollax-parent="true">
           <div class="row slider-text align-items-end">
@@ -68,8 +68,8 @@
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-3">Meet Our Experience Dentist</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences</p>
+            <h2 class="mb-3">Meet Our Experience Doctors & Specialists</h2>
+            <p>Doctors, nurses and specialists are personable, great listeners, and empathetic to the concerns of all patients of all ages.</p>
           </div>
         </div>
         <div class="row">
@@ -77,10 +77,10 @@
         		<div class="staff">
       				<div class="img mb-4" style="background-image: url(images/person_5.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Tom Smith</a></h3>
-      					<span class="position">Dentist</span>
+      					<h3><a href="teacher-single.html">Mwangi</a></h3>
+      					<span class="position">Administrator</span>
       					<div class="text">
-	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+	        				<p>Organizes and oversees the health services and daily activities of a Hospital</p>
 	        				<ul class="ftco-social">
 			              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -95,10 +95,10 @@
         		<div class="staff">
       				<div class="img mb-4" style="background-image: url(images/person_6.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Mark Wilson</a></h3>
-      					<span class="position">Dentist</span>
+      					<<h3><a href="teacher-single.html">DR. Ngandu</a></h3>
+      					<span class="position">Doctor in Charge</span>
       					<div class="text">
-	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+	        				<p>Chief Doctor position at the Kenneth Matiba hospital.</p>
 	        				<ul class="ftco-social">
 			              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -113,10 +113,10 @@
         		<div class="staff">
       				<div class="img mb-4" style="background-image: url(images/person_7.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Patrick Jacobson</a></h3>
-      					<span class="position">Dentist</span>
-      					<div class="text">
-	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+						<h3><a href="teacher-single.html">Sammy Kanyi</a></h3>
+						<span class="position">Dentist</span>
+						<div class="text">
+						  <p>Diagnosing oral diseases & Creating Treatment Plans to maintain/restore the oral health of patients</p>
 	        				<ul class="ftco-social">
 			              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -129,12 +129,12 @@
         	</div>
         	<div class="col-lg-3 col-md-6 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
-      				<div class="img mb-4" style="background-image: url(images/person_8.jpg);"></div>
+      				<div class="img mb-4" style="background-image: url(images/SAMMY.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Ivan Dorchsner</a></h3>
-      					<span class="position">System Analyst</span>
-      					<div class="text">
-	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+						<h3><a href="teacher-single.html">Sammy Kanyi</a></h3>
+						<span class="position">ICT HEAD</span>
+						<div class="text">
+						  <p>This includes databases, servers & networking. ICT ensures streamlined fully working systems in the Hospital.</p>
 	        				<ul class="ftco-social">
 			              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -228,7 +228,7 @@
     			<div class="col-md-3 aside-stretch py-5">
     				<div class=" heading-section heading-section-white ftco-animate pr-md-4">
 	            <h2 class="mb-3">Achievements</h2>
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+	            <p>We offer FREE Eye and Dental treatment using Modern technology and techniques for the best result.</p>
 	          </div>
     			</div>
     			<div class="col-md-9 py-5 pl-md-5">
@@ -236,7 +236,7 @@
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="14">0</strong>
+		                <strong class="number" data-number="10">0</strong>
 		                <span>Years of Experience</span>
 		              </div>
 		            </div>
@@ -244,7 +244,7 @@
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="4500">0</strong>
+		                <strong class="number" data-number="1000">0</strong>
 		                <span>Qualified Dentist</span>
 		              </div>
 		            </div>
@@ -252,7 +252,7 @@
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="4200">0</strong>
+		                <strong class="number" data-number="15000">0</strong>
 		                <span>Happy Smiling Customer</span>
 		              </div>
 		            </div>
@@ -260,7 +260,7 @@
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="320">0</strong>
+		                <strong class="number" data-number="1500">0</strong>
 		                <span>Patients Per Year</span>
 		              </div>
 		            </div>
