--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>DentaCare - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Kenneth Matiba Hospital - ContactUs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Denta<span>Care</span></a>
+	      <a class="navbar-brand" href="index.html">Kenneth<span>Matiba</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -41,7 +41,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="doctors.html" class="nav-link">Doctors</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Articles</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="contact.html" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Make an Appointment</span></a></li>
 	        </ul>
@@ -51,7 +51,7 @@
     <!-- END nav -->
 
     <section class="home-slider owl-carousel">
-      <div class="slider-item bread-item" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+      <div class="slider-item bread-item" style="background-image: url('images/CNT.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container" data-scrollax-parent="true">
           <div class="row slider-text align-items-end">
@@ -72,16 +72,16 @@
           </div>
           <div class="w-100"></div>
           <div class="col-md-3">
-            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+            <p><span>Address:</span> KENOL town 70m(200ft) off Nairobi-Nyeri Highway, Maragwa, Muranga, Kenya</p>
           </div>
           <div class="col-md-3">
             <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+            <p><span>Email:</span> <a href="mailto:info@kanyisammy@gmail.com">kanyisammy@gmail.com</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Website</span> <a href="#">yoursite.com</a></p>
+            <p><span>Website</span> <a href="https://muranga.go.ke/"></a>Muranga County Government</p>
           </div>
         </div>
         <div class="row block-9">
@@ -116,63 +116,63 @@
         <div class="row mb-5">
           <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">DentaCare.</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-            <ul class="ftco-footer-social list-unstyled float-md-left float-lft ">
-              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-            </ul>
-          </div>
-          <div class="col-md-2">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Quick Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Features</a></li>
-                <li><a href="#" class="py-2 d-block">Projects</a></li>
-                <li><a href="#" class="py-2 d-block">Blog</a></li>
-                <li><a href="#" class="py-2 d-block">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-4 pr-md-4">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Recent Blog</h2>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Office</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-	              </ul>
+              <h2 class="ftco-heading-2">DICE/CHS.</h2>
+				<p>CHS works closely with the Ministry of Health to support the implementation of better quality health services in Kenya through sustainable health solutions</p>
+			  </div>
+			  <ul class="ftco-footer-social list-unstyled float-md-left float-lft ">
+				<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+				<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+				<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+			  </ul>
+			</div>
+			<div class="col-md-2">
+			  <div class="ftco-footer-widget mb-4 ml-md-5">
+				<h2 class="ftco-heading-2">Quick Links</h2>
+				<ul class="list-unstyled">
+				  <li><a href="#" class="py-2 d-block">About</a></li>
+				  <li><a href="#" class="py-2 d-block">Features</a></li>
+				  <li><a href="#" class="py-2 d-block">Projects</a></li>
+				  <li><a href="#" class="py-2 d-block">Articles</a></li>
+				  <li><a href="#" class="py-2 d-block">Contact</a></li>
+				</ul>
+			  </div>
+			</div>
+			<div class="col-md-4 pr-md-4">
+			  <div class="ftco-footer-widget mb-4">
+				<h2 class="ftco-heading-2">Recent Articles</h2>
+				<div class="block-21 mb-4 d-flex">
+				  <a class="blog-img mr-4" style="background-image: url(images/WAIRIA.jpg);"></a>
+				  <div class="text">
+					<h3 class="heading"><a href="#">The Murang’a County Government has said the free clinic for patients...</a></h3>
+					<div class="meta">
+					  <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
+					  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+					  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+					</div>
+				  </div>
+				</div>
+				<div class="block-21 mb-4 d-flex">
+				  <a class="blog-img mr-4" style="background-image: url(images/KN.jpg);"></a>
+				  <div class="text">
+					<h3 class="heading"><a href="#">Construction of a new state-of-the-art health facility for relocation of the Kenneth Matiba Eye & dental...</a></h3>
+					<div class="meta">
+					  <div><a href="#"><span class="icon-calendar"></span> Jan 5, 2021</a></div>
+					  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+					  <div><a href="#"><span class="icon-chat"></span> 54</a></div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-3">
+			  <div class="ftco-footer-widget mb-4">
+				  <h2 class="ftco-heading-2">Office</h2>
+				  <div class="block-23 mb-3">
+					<ul>
+					  <li><span class="icon icon-map-marker"></span><span class="text">KENOL town off Nairobi-Nyeri Highway, Maragwa, Muranga, Kenya</span></li>
+					  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+					  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">kanyisammy@gmail.com</span></a></li>
+					</ul>
 	            </div>
             </div>
           </div>
