--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </div>
       <div class="container-wrap mt-5">
       	<div class="row d-flex no-gutters">
-      		<div class="col-md-6 img" style="background-image: url(images/about-2.jpg);">
+      		<div class="col-md-6 img" style="background-image: url(images/WAIRIA3.jpg);">
       		</div>
       		<div class="col-md-6 d-flex">
       			<div class="about-wrap">
@@ -605,7 +605,7 @@
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/.jpg);">
+						<a href="#" class="gallery img d-flex align-items-center" style="background-image: url(images/KM1.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-search"></span>
     					</div>
