--- a/doctors.html
+++ b/doctors.html
@@ -168,7 +168,7 @@
       				<div class="img mb-4" style="background-image: url(images/person_2.jpg);"></div>
       				<div class="info text-center">
       					<h3><a href="teacher-single.html">Mark Wilson</a></h3>
-      					<span class="position">Dentist</span>
+      					<span class="position">Head Nurse</span>
       					<div class="text">
 	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 	        				<ul class="ftco-social">
@@ -185,8 +185,8 @@
         		<div class="staff">
       				<div class="img mb-4" style="background-image: url(images/person_3.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Patrick Jacobson</a></h3>
-      					<span class="position">Dentist</span>
+      					<h3><a href="teacher-single.html">Phanice</a></h3>
+      					<span class="position">Administrator CHS</span>
       					<div class="text">
 	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 	        				<ul class="ftco-social">
@@ -203,8 +203,8 @@
         		<div class="staff">
       				<div class="img mb-4" style="background-image: url(images/person_4.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Ivan Dorchsner</a></h3>
-      					<span class="position">System Analyst</span>
+      					<h3><a href="teacher-single.html">Julia</a></h3>
+      					<span class="position">Secretary</span>
       					<div class="text">
 	        				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 	        				<ul class="ftco-social">
