--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/bg_2.jpg');">
+      <div class="slider-item" style="background-image: url('images/WAIRIA3.jpg');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
               <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Kenneth Matiba Eye and Dental Hospital, located in Kenol town on the Nairobi-Nyeri highway, is the only public facility of its kind in the country</h1>
-              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p class="mb-4">Free Eye and Dental treatment with a Modern feel and attention.</p>
               <p><a href="#" class="btn btn-primary px-4 py-3">Make an Appointment</a></p>
             </div>
           </div>
@@ -83,7 +83,7 @@
     		<div class="row no-gutters">
     			<div class="col-md-3 color-1 p-4">
     				<h3 class="mb-4">Emergency Cases</h3>
-    				<p>A small river named Duden flows by their place and supplies</p>
+    				<p>                                                   </p>
     				<span class="phone-number">+ (123) 456 7890</span>
     			</div>
     			<div class="col-md-3 color-2 p-4">
@@ -94,7 +94,7 @@
     				</p>
     				<p class="openinghours d-flex">
     					<span>Saturday</span>
-    					<span>09:00 - 13:00</span>
+    					<span>     -      </span>
     				</p>
     				<p class="openinghours d-flex">
     					<span>Sunday</span>
@@ -167,7 +167,7 @@
       	<div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
             <h2 class="mb-2">Our Service Keeps you Smile</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p>Doctors, nurses and specialists are personable, great listeners, and empathetic to the concerns of all patients of all ages.</p>
           </div>
         </div>
         <div class="row">
@@ -219,7 +219,7 @@
       </div>
       <div class="container-wrap mt-5">
       	<div class="row d-flex no-gutters">
-      		<div class="col-md-6 img" style="background-image: url(images/WAIRIA3.jpg);">
+      		<div class="col-md-6 img" style="background-image: url(images/WAIRIA6.jpg);">
       		</div>
       		<div class="col-md-6 d-flex">
       			<div class="about-wrap">
