--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/WAIRIA3.jpg');">
+      <div class="slider-item" style="background-image: url('images/bg_2.jpg');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
@@ -84,7 +84,7 @@
     			<div class="col-md-3 color-1 p-4">
     				<h3 class="mb-4">Emergency Cases</h3>
     				<p>                                                   </p>
-    				<span class="phone-number">+ (123) 456 7890</span>
+    				<span class="phone-number">+ (254) 711 474 252</span>
     			</div>
     			<div class="col-md-3 color-2 p-4">
     				<h3 class="mb-4">Opening Hours</h3>
@@ -219,7 +219,7 @@
       </div>
       <div class="container-wrap mt-5">
       	<div class="row d-flex no-gutters">
-      		<div class="col-md-6 img" style="background-image: url(images/WAIRIA6.jpg);">
+      		<div class="col-md-6 img" style="background-image: url(images/WAIRIA7.jpg);">
       		</div>
       		<div class="col-md-6 d-flex">
       			<div class="about-wrap">
@@ -272,9 +272,9 @@
         <div class="row">
         	<div class="col-lg-3 col-md-6 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
-      				<div class="img mb-4" style="background-image: url(images/person_8.jpg);"></div>
+      				<div class="img mb-4" style="background-image: url(images/MWANGI.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Mwangi</a></h3>
+      					<h3><a href="teacher-single.html">Mr. Mwangi</a></h3>
       					<span class="position">Administrator</span>
       					<div class="text">
 	        				<p>Organizes and oversees the health services and daily activities of a Hospital</p>
@@ -290,7 +290,7 @@
         	</div>
         	<div class="col-lg-3 col-md-6 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
-      				<div class="img mb-4" style="background-image: url(images/person_6.jpg);"></div>
+      				<div class="img mb-4" style="background-image: url(images/DRngandu.jpeg);"></div>
       				<div class="info text-center">
       					<h3><a href="teacher-single.html">DR. Ngandu</a></h3>
       					<span class="position">Doctor in Charge</span>
@@ -308,9 +308,9 @@
         	</div>
         	<div class="col-lg-3 col-md-6 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
-      				<div class="img mb-4" style="background-image: url(images/person_7.jpg);"></div>
+      				<div class="img mb-4" style="background-image: url(images/DRIRUNGU.jpg);"></div>
       				<div class="info text-center">
-      					<h3><a href="teacher-single.html">Sammy Kanyi</a></h3>
+      					<h3><a href="teacher-single.html">DR. Irungu</a></h3>
       					<span class="position">Dentist</span>
       					<div class="text">
 	        				<p>Diagnosing oral diseases & Creating Treatment Plans to maintain/restore the oral health of patients</p>
